Creata folder apposita per scraper account free

--- a/free-account-scraper/config.ini
+++ b/free-account-scraper/config.ini
@@ -4,8 +4,8 @@ MAX_LOADING_ATTEMPTS = 30
 ;sleep time between click actions. Increase only if scrolling the project's page is giving issues.
 SLEEP_TIME = 1
 ;number of users to scrape.
-USERS_TO_SCRAPE = 10
+USERS_TO_SCRAPE = 20
 
 [LOGIN]
-EMAIL = linkedinmail
-PASSWORD = linkedinpass
+EMAIL = andrea.fedele@yandex.com
+PASSWORD = sna20202020
