Creato path per nuovo script di scraping su premium linkedin account

--- a/free-urls-scraper/config.ini
+++ b/free-urls-scraper/config.ini
@@ -7,5 +7,5 @@ SLEEP_TIME = 1
 USERS_TO_SCRAPE = 20
 
 [LOGIN]
-EMAIL = andrea.fedele@yandex.com
-PASSWORD = sna20202020
+EMAIL = linkedinmail
+PASSWORD = linkedinpass
