--- a/premium-urls-scraper/config.ini
+++ b/premium-urls-scraper/config.ini
@@ -4,8 +4,12 @@ MAX_LOADING_ATTEMPTS = 30
 ;sleep time between click actions. Increase only if scrolling the project's page is giving issues.
 SLEEP_TIME = 1
 ;number of users to scrape.
-USERS_TO_SCRAPE = 20
+USERS_TO_SCRAPE = 100
 
 [LOGIN]
-EMAIL = linkedinmail
-PASSWORD = linkedinpass
+EMAIL = vale-96@virgilio.it
+PASSWORD = sna2020
+
+[FILTERS]
+LOCATION = 103350119
+NEMPLOYEES = C,D,E
