Modifica login config

--- a/premium-urls-scraper/config.ini
+++ b/premium-urls-scraper/config.ini
@@ -7,8 +7,8 @@ SLEEP_TIME = 1
 USERS_TO_SCRAPE = 100
 
 [LOGIN]
-EMAIL = vale-96@virgilio.it
-PASSWORD = sna2020
+EMAIL = linkedinmail
+PASSWORD = linkedinpass
 
 [FILTERS]
 LOCATION = 103350119
