-Aggiunto export screenshot in fase di errore e chiusura script -Aggiunto refresh page in caso di blocco dovuto ad un elemento non trovato per MAX_LOADING_ATTEMPS / 2 volte

--- a/premium-urls-scraper/.gitignore
+++ b/premium-urls-scraper/.gitignore
@@ -10,5 +10,9 @@ __pycache__/
 # exception to the rule
 !/driver/.gitkeep 
 
-# users export
+# Csv export
 users.csv
+
+# Screenshots
+screenshot_error.png
+screenshot_closing.png
