-Gestitio nuovo filtro SETTORE AZIENDALE -Rimosso script per standard account scraping -Gestito naming csv (multi script simultaneo adesso fattibile)

--- a/premium-urls-scraper/config.ini
+++ b/premium-urls-scraper/config.ini
@@ -4,7 +4,7 @@ MAX_LOADING_ATTEMPTS = 30
 ;sleep time between click actions. Increase only if scrolling the project's page is giving issues.
 SLEEP_TIME = 1
 ;number of users to scrape.
-USERS_TO_SCRAPE = 100
+USERS_TO_SCRAPE = 2500
 
 [LOGIN]
 EMAIL = linkedinmail
@@ -12,4 +12,5 @@ PASSWORD = linkedinpass
 
 [FILTERS]
 LOCATION = 103350119
-NEMPLOYEES = C,D,E
+NEMPLOYEES = I
+INDUSTRIES = 96,97
