-gestito multi configurazione di filtri -gestito break nel momento in cui i risultati sono finiti -aggiunti filtri di ricerca nell record di export

--- a/premium-urls-scraper/config.ini
+++ b/premium-urls-scraper/config.ini
@@ -3,14 +3,19 @@
 MAX_LOADING_ATTEMPTS = 30
 ;sleep time between click actions. Increase only if scrolling the project's page is giving issues.
 SLEEP_TIME = 1
-;number of users to scrape.
+;number of users to scrape (DO NOT CHANGE THIS).
 USERS_TO_SCRAPE = 2500
 
 [LOGIN]
 EMAIL = linkedinmail
 PASSWORD = linkedinpass
 
-[FILTERS]
+[FILTERCONFIG:1]
 LOCATION = 103350119
-NEMPLOYEES = I
-INDUSTRIES = 96,97
+NEMPLOYEES = A,B
+INDUSTRIES = 101
+
+[FILTERCONFIG:2]
+LOCATION = 103350119
+NEMPLOYEES = F
+INDUSTRIES = 101
